updated details for 2022

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       content="width=device-width, initial-scale=1.0, shrink-to-fit=no"
     />
     <title>Home - CTE TechWeekend</title>
-    <meta name="description" content="TechWeekend 2021" />
+    <meta name="description" content="TechWeekend 2022" />
     <link
       rel="stylesheet"
       href="assets/bootstrap/css/bootstrap.min.css?h=c4031fd3279b72e347722c4068ca6ef9"
@@ -196,7 +196,7 @@
               background: rgba(150, 149, 149, 0);
             "
           >
-            Summer&nbsp;<strong>2021</strong><br />
+            Summer&nbsp;<strong>2022</strong><br />
           </h2>
           <h1 style="color: #45b334; transform: scale(0.6)">
             Associate Sponsor :&nbsp;<a href="https://www.geeksforgeeks.org/"
@@ -247,11 +247,12 @@
                 </div>
                 <div class="col">
                   <p style="color: rgb(122, 204, 109)">
-                    9th July<br />9pm to 11:30pm<br />₹10000<br />
+                    20 March<br />8:30pm to 11:30pm<br />₹1500<br />
                   </p>
                 </div>
               </div>
               <button
+              onclick="window.open('https://bp-gc.in/TW_22_techweed','_blank');"
               class="btn btn-primary border rounded-0"
               type="button"
               style="
@@ -439,11 +440,12 @@
                 </div>
                 <div class="col">
                   <p style="color: rgb(122, 204, 109)">
-                    7th July<br />6:00 PM to 8:00 PM<br />₹5000<br />
+                    20 March<br />2:00 PM to 5:00 PM<br />₹2200<br />
                   </p>
                 </div>
               </div>
               <button
+              onclick="window.open('https://bp-gc.in/TW_22_arudino','_blank');"
               class="btn btn-primary border rounded-0"
               type="button"
               style="
@@ -501,12 +503,12 @@
                 </div>
                 <div class="col">
                   <p style="color: rgb(122, 204, 109)">
-                    5th-7th July<br />All Day [12pm - 12pm]<br />₹10000+<br />
+                    24th-25th March<br />All Day [12pm - 12pm]<br />₹2200+<br />
                   </p>
                 </div>
               </div>
               <button
-              
+              onclick="window.open('https://bp-gc.in/TW_22_ctf','_blank');"
               class="btn btn-primary border rounded-0"
               type="button"
               style="
@@ -563,11 +565,12 @@
                 </div>
                 <div class="col">
                   <p style="color: rgb(122, 204, 109)">
-                    8th July - 11th July<br />All day<br />₹5000<br />
+                    TBA<br />TBA<br />₹2000<br />
                   </p>
                 </div>
               </div>
               <button
+              onclick="window.open('https://bp-gc.in/TW_22_curiosity','_blank');"
               class="btn btn-primary border rounded-0"
               type="button"
               style="
@@ -620,11 +623,12 @@ Register            </button>
                 </div>
                 <div class="col">
                   <p style="color: rgb(122, 204, 109)">
-                    5th-11th July<br />All Day<br />₹3000+<br />
+                    TBA<br />TBA<br />₹2000+<br />
                   </p>
                 </div>
               </div>
               <button
+              onclick="window.open('https://bp-gc.in/TW_22_destinationapogee','_blank');"
               class="btn btn-primary border rounded-0"
               type="button"
               style="
@@ -687,11 +691,12 @@ Register            </button>
                   </div>
                   <div class="col">
                     <p style="color: rgb(122, 204, 109)">
-                      Weeklong[5th July - 12th July]<br />Allday<br />₹7000+<br />
+                      Weeklong[19th - 25th March]<br />Allday<br />₹2200+<br />
                     </p>
                   </div>
                 </div>
                 <button
+                onclick="window.open('https://bp-gc.in/TW_22_ml','_blank');"
                 class="btn btn-primary border rounded-0"
                 type="button"
                 style="
@@ -746,11 +751,12 @@ Register            </button>
                 </div>
                 <div class="col">
                   <p style="color: rgb(122, 204, 109)">
-                    11th July<br />3 PM - 6 PM<br />₹5000<br />
+                    22nd March<br />TBA<br />₹2200<br />
                   </p>
                 </div>
               </div>
               <button
+              onclick="window.open('https://bp-gc.in/TW_22_codegolf','_blank');"
               class="btn btn-primary border rounded-0"
               type="button"
               style="
@@ -821,11 +827,12 @@ Register            </button>
                 </div>
                 <div class="col">
                   <p style="color: rgb(122, 204, 109)">
-                    9th July<br />6PM - 8PM<br />₹3000<br />
+                    24th March<br />6PM - 9PM<br />₹3000<br />
                   </p>
                 </div>
               </div>
               <button
+              onclick="window.open('https://bp-gc.in/TW_22_mayday','_blank');"
               class="btn btn-primary border rounded-0"
               type="button"
               style="
@@ -879,11 +886,12 @@ Register            </button>
                 </div>
                 <div class="col">
                   <p style="color: rgb(122, 204, 109)">
-                    8th July - 11th July<br/>All Day<br /><br />₹5000<br />
+                    TBA<br/>TBA<br /><br />₹2200<br />
                   </p>
                 </div>
               </div>
               <button
+              onclick="window.open('https://bp-gc.in/TW_22_inovationquiz','_blank');"
               class="btn btn-primary border rounded-0"
               type="button"
               style="
@@ -925,7 +933,7 @@ Register            </button>
             small
           "
         >
-          <br />Copyright&nbsp;© CTE 2021&nbsp;<br />Designed and Developed by
+          <br />Copyright&nbsp;© CTE 2022&nbsp;<br />Designed and Developed by
           Shreyas V, Darshan Khade<br />Special
           Thanks to CTE PR Team for the images<br /><br />
         </p>
