--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
                 </div>
                 <div class="col">
                   <p style="color: rgb(122, 204, 109)">
-                    20 March<br />8:30pm to 11:30pm<br />₹1500<br />
+                    20 March<br />8:30pm to 11:30pm<br />₹4000+<br />
                   </p>
                 </div>
               </div>
@@ -440,7 +440,7 @@
                 </div>
                 <div class="col">
                   <p style="color: rgb(122, 204, 109)">
-                    20 March<br />2:00 PM to 5:00 PM<br />₹2200<br />
+                    20 March<br />2:00 PM to 5:00 PM<br />₹3000+<br />
                   </p>
                 </div>
               </div>
@@ -503,7 +503,7 @@
                 </div>
                 <div class="col">
                   <p style="color: rgb(122, 204, 109)">
-                    24th-25th March<br />All Day [12pm - 12pm]<br />₹2200+<br />
+                    24th-25th March<br />All Day [12pm - 12pm]<br />₹3000+<br />
                   </p>
                 </div>
               </div>
@@ -565,7 +565,7 @@
                 </div>
                 <div class="col">
                   <p style="color: rgb(122, 204, 109)">
-                    TBA<br />TBA<br />₹2000<br />
+                    19th March<br />TBA<br />₹3000+<br />
                   </p>
                 </div>
               </div>
@@ -623,7 +623,7 @@ Register            </button>
                 </div>
                 <div class="col">
                   <p style="color: rgb(122, 204, 109)">
-                    TBA<br />TBA<br />₹2000+<br />
+                    19-21st March<br />All Day<br />₹3000+<br />
                   </p>
                 </div>
               </div>
@@ -691,7 +691,7 @@ Register            </button>
                   </div>
                   <div class="col">
                     <p style="color: rgb(122, 204, 109)">
-                      Weeklong[19th - 25th March]<br />Allday<br />₹2200+<br />
+                      Weeklong[19th - 25th March]<br />Allday<br />₹3000+<br />
                     </p>
                   </div>
                 </div>
@@ -743,7 +743,7 @@ Register            </button>
                 Devsoc
               </h1>
               <p class="text-start" style="color: rgb(33, 37, 41)">
-                lorem ipsum&nbsp;<br />
+                Code golf is a type of recreational computer programming competition in which participants strive to achieve the shortest possible source code that solves a certain problem.&nbsp;<br />
               </p>
               <div class="row">
                 <div class="col text-start">
@@ -827,7 +827,7 @@ Register            </button>
                 </div>
                 <div class="col">
                   <p style="color: rgb(122, 204, 109)">
-                    24th March<br />6PM - 9PM<br />₹3000<br />
+                    24th March<br />6PM - 9PM<br />₹3000+<br />
                   </p>
                 </div>
               </div>
@@ -886,7 +886,7 @@ Register            </button>
                 </div>
                 <div class="col">
                   <p style="color: rgb(122, 204, 109)">
-                    TBA<br/>TBA<br /><br />₹2200<br />
+                    23rd March<br/>6-9 Pm<br /><br />₹2200<br />
                   </p>
                 </div>
               </div>
