--- a/talks.html
+++ b/talks.html
@@ -242,7 +242,7 @@
                 will be discussed.<br />
               </p>
               <p style="color: #44cd5a; font-size: 18px">
-                <strong>July 5th 2021, 5pm</strong><br />
+                <strong>March 22nd 2021, 4pm</strong><br />
               </p>
               <button
                 class="btn btn-primary border rounded-0"
@@ -262,7 +262,7 @@
         </div>
       </div>
     </section>
-    <section>
+    <!--section>
       <div class="container">
         <div
           class="row align-items-center"
@@ -522,7 +522,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </section-->
     <footer class="d-flex py-5 bg-black" style="width: 100vw; height: 10vh">
       <div
         class="
