--- a/index.html
+++ b/index.html
@@ -127,10 +127,10 @@
                 data-bss-hover-animate="shake"
                 href="talks.html"
                 style="color: rgb(0, 0, 0)"
-                >talks</a
+                >Talks</a
               >
             </li>
-            <li class="nav-item">
+            <!--li class="nav-item">
               <a
                 class="nav-link"
                 data-bss-hover-animate="shake"
@@ -138,10 +138,10 @@
                 style="color: rgb(0, 0, 0)"
                 >Winners</a
               >
-            </li>
+            </li-->
             <li class="nav-item"></li>
             <!-- <li class="nav-item"><a class="nav-link active" data-bss-hover-animate="shake" href="#" style="color: rgb(0,0,0);">Timeline</a></li> -->
-            <li class="nav-item">
+            <!--li class="nav-item">
               <a
                 class="nav-link active"
                 data-bss-hover-animate="shake"
@@ -150,7 +150,7 @@
                 style="color: rgb(0, 0, 0)"
                 >Techforums</a
               >
-            </li>
+            </li-->
             <li class="nav-item">
               <a
                 class="nav-link active"
@@ -158,7 +158,7 @@
                 href="https://bpgc-cte.org/"
                 target="_blank"
                 style="color: rgb(0, 0, 0)"
-                >website</a
+                >Website</a
               >
             </li>
           </ul>
