--- a/talks.html
+++ b/talks.html
@@ -126,7 +126,7 @@
                 >Talks</a
               >
             </li>
-            <li class="nav-item">
+            <!--li class="nav-item">
               <a
                 class="nav-link"
                 data-bss-hover-animate="shake"
@@ -134,10 +134,10 @@
                 style="color: rgb(0, 0, 0)"
                 >Winners</a
               >
-            </li>
+            </li-->
             <li class="nav-item"></li>
             <!-- <li class="nav-item"><a class="nav-link active" data-bss-hover-animate="shake" href="#" style="color: rgb(0,0,0);">Timeline</a></li> -->
-            <li class="nav-item">
+            <!--li class="nav-item">
               <a
                 class="nav-link active"
                 data-bss-hover-animate="shake"
@@ -145,14 +145,14 @@
                 style="color: rgb(0, 0, 0)"
                 >Techforums</a
               >
-            </li>
+            </li-->
             <li class="nav-item">
               <a
                 class="nav-link active"
                 data-bss-hover-animate="shake"
                 href="https://bpgc-cte.org/"
                 style="color: rgb(0, 0, 0)"
-                >website</a
+                >Website</a
               >
             </li>
           </ul>
