--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
               background: rgba(150, 149, 149, 0);
             "
           >
-            Summer&nbsp;<strong>2022</strong><br />
+            Spring&nbsp;<strong>2022</strong><br />
           </h2>
           <h1 style="color: #45b334; transform: scale(0.6)">
             Associate Sponsor :&nbsp;<a href="https://www.geeksforgeeks.org/"
