--- a/talks.html
+++ b/talks.html
@@ -190,7 +190,7 @@
               background: rgba(150, 149, 149, 0);
             "
           >
-            Summer&nbsp;<strong>2021</strong><br />
+            Spring&nbsp;<strong>2022</strong><br />
           </h2>
           <h1 style="color: #45b334; transform: scale(0.6)">
             <strong>Associate Sponsor :&nbsp;</strong
@@ -230,19 +230,18 @@
           <div class="col-lg-6 order-lg-1">
             <div class="p-5">
               <h2 class="display-4">
-                <strong>Basics of API with Postman</strong><br />
+                <strong>Resume building workshop</strong><br />
               </h2>
               <p style="color: #44cd5a; font-size: 21px; font-weight: bold">
-                by <strong>Somnath</strong><br />
+                by <strong>GeeksForGeeks</strong><br />
               </p>
               <p style="font-weight: bold">
-                Postman Talk will cover the concepts of API and its usage in the
-                real world along with digital world examples. Basics of APIs,
-                Postman’s role in training in APIs, its popularity and growth
-                will be discussed.<br />
+                GeeksForGeeks in association with CTE is organizing a webinar on “resume building” followed by a doubt clearing session.
+This webinar will be helpful for students of all branches and is targeted towards first and second year students.
+<br />
               </p>
               <p style="color: #44cd5a; font-size: 18px">
-                <strong>March 22nd 2021, 4pm</strong><br />
+                <strong>March 22nd 2022, 4pm</strong><br />
               </p>
               <button
                 class="btn btn-primary border rounded-0"
