--- a/talks.html
+++ b/talks.html
@@ -254,7 +254,7 @@ This webinar will be helpful for students of all branches and is targeted toward
                   border-left-color: rgb(252, 252, 252);
                 "
               >
-                Completed
+                Register
               </button>
             </div>
           </div>
