--- a/index.html
+++ b/index.html
@@ -198,13 +198,13 @@
           >
             Spring&nbsp;<strong>2022</strong><br />
           </h2>
-          <h1 style="color: #45b334; transform: scale(0.6)">
+          <!--h1 style="color: #45b334; transform: scale(0.6)">
             Associate Sponsor :&nbsp;<a href="https://www.geeksforgeeks.org/"
               ><img
                 src="assets/img/GFG%20LOGO-3%20(1).png?h=161d3763c8528dff49daa8b164e866c5"
                 style="transform: scale(1); min-width: 4vw; min-height: 4vh; max-width: 8vw;"
             /></a>
-          </h1>
+          </h1-->
         </div>
       </div>
     </header>
@@ -235,6 +235,14 @@
               <h1 style="font-size: 17px; color: rgb(68, 205, 90)">
                 ALGOMANIAX
               </h1>
+              <h3 style="font-size: 15px; color: rgb(68, 205, 90)">
+                Sponsored By :&nbsp;<a href="https://www.geeksforgeeks.org/"
+              > GeeksForGeeks<!--img
+                src="assets/img/GFG%20LOGO-3%20(1).png?h=161d3763c8528dff49daa8b164e866c5"
+                style="transform: scale(1); min-width: 4vw; min-height: 4vh; max-width: 8vw;"
+            /--></a>
+              </h3>
+              
               <p class="text-start" style="color: rgb(33, 37, 41)">
                 Competitive coding is a mind sport that shall give you an
                 adrenaline rush. There will be about 5 questions that will
@@ -944,3 +952,4 @@ Register            </button>
     <script src="assets/js/bs-init.js?h=7563c52cc0a72a92d96ce0159b71241c"></script>
   </body>
 </html>
+                                                                                                                                                                                                        
