--- a/talks.html
+++ b/talks.html
@@ -192,7 +192,7 @@
           >
             Spring&nbsp;<strong>2022</strong><br />
           </h2>
-          <h1 style="color: #45b334; transform: scale(0.6)">
+          <!--h1 style="color: #45b334; transform: scale(0.6)">
             <strong>Associate Sponsor :&nbsp;</strong
             ><a href="https://www.geeksforgeeks.org/"
               ><img
@@ -205,7 +205,7 @@
                 "
                 href="https://www.geeksforgeeks.org/" /></a
             ><br />
-          </h1>
+          </h1-->
         </div>
       </div>
     </header>
