--- a/index.html
+++ b/index.html
@@ -496,7 +496,7 @@
                 Capture The Flag
               </h2>
               <h1 style="font-size: 17px; color: rgb(68, 205, 90)">
-                BITS KRIEG<br />
+                BITSKreig<br />
               </h1>
               <p class="text-start" style="color: rgb(33, 37, 41)">
                 CTE in association with BITS KRIEG brings you an ethical<br />
@@ -884,17 +884,17 @@ Register            </button>
               </h2>
               <h1 style="font-size: 17px; color: rgb(68, 205, 90)">IEEE</h1>
               <p class="text-start" style="color: rgb(33, 37, 41)">
-                Test your technical skills along with your sharp intuition for gambling in this  auction based event. You will be given credits you can use to spend on a set of questions which differ from topic to topic and also differ in difficulty level, each awarding points based on these criteria.. Spend credits, solve sets and earn points. It will be held through discord. Sign up for this insightful,rush thrilled contest.<br />
+                Test your technical skills along with your sharp intuition for gambling in this  auction based event. You will be given credits you can use to spend on a set of questions which differ from topic to topic and also differ in difficulty level, each awarding points based on these criteria.. Spend credits, solve sets and earn points.<br />
               </p>
               <div class="row">
                 <div class="col text-start">
                   <p style="width: 135px">
-                    Date<br /><br />Time<br /><br />Prizes
+                    Date<br />Time<br />Prizes
                   </p>
                 </div>
                 <div class="col">
                   <p style="color: rgb(122, 204, 109)">
-                    23rd March<br/>6-9 Pm<br /><br />₹2200<br />
+                    23rd March<br/>6-9 Pm<br />₹2200<br />
                   </p>
                 </div>
               </div>
