--- a/index.html
+++ b/index.html
@@ -609,7 +609,7 @@ Register            </button>
             <div class="p-5">
               <img
                 class="img-thumbnail img-fluid"
-                src="assets/img/sedss.jpg"
+                src="assets/img/DAp.png"
                 style="max-height: 40vh "
               />
             </div>
