--- a/talks.html
+++ b/talks.html
@@ -223,7 +223,7 @@
             <div class="p-5">
               <img
                 class="rounded-circle img-fluid"
-                src="assets/img/postman.png?h=c8268219a3461029f677b42e28cd8b4f"
+                src="assets/img/gfgresume.png?h=c8268219a3461029f677b42e28cd8b4f"
               />
             </div>
           </div>
@@ -244,6 +244,7 @@ This webinar will be helpful for students of all branches and is targeted toward
                 <strong>March 22nd 2022, 4pm</strong><br />
               </p>
               <button
+                onclick="window.open('https://bp-gc.in/tw22_gfgresume','_blank');"
                 class="btn btn-primary border rounded-0"
                 type="button"
                 style="
