--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
                 </div>
                 <div class="col">
                   <p style="color: rgb(122, 204, 109)">
-                    10th-17th July<br />Starts and Ends at 6pm<br />₹25000<br />
+                    10th-17th <br />Starts and Ends at 6pm<br />₹25000<br />
                   </p>
                 </div>
               </div>
@@ -688,8 +688,8 @@ Register            </button>
                 <p style="background: #ffffff">
                   Show off your Machine Learning skills in this Hackathon
                   starting March 19th!<br />There will be one problem statement
-                  for which you would need to make a submission before 12th of
-                  July, A very basic solution will be provided to help you get
+                  for which you would need to make a submission before 25th of
+                  March, A very basic solution will be provided to help you get
                   started. The event will be held on Kaggle. Make sure you have
                   an account on Kaggle<br />
                 </p>
