updated dates for events

--- a/index.html
+++ b/index.html
@@ -573,7 +573,7 @@
                 </div>
                 <div class="col">
                   <p style="color: rgb(122, 204, 109)">
-                    19th March<br />TBA<br />₹3000+<br />
+                    20th to 21st March<br />TBA<br />₹3000+<br />
                   </p>
                 </div>
               </div>
@@ -631,7 +631,7 @@ Register            </button>
                 </div>
                 <div class="col">
                   <p style="color: rgb(122, 204, 109)">
-                    19-21st March<br />All Day<br />₹3000+<br />
+                    22-23st March<br />All Day<br />₹3000+<br />
                   </p>
                 </div>
               </div>
@@ -699,7 +699,7 @@ Register            </button>
                   </div>
                   <div class="col">
                     <p style="color: rgb(122, 204, 109)">
-                      Weeklong[19th - 25th March]<br />Allday<br />₹3000+<br />
+                      Weeklong[20th - 25th March]<br />Allday<br />₹3000+<br />
                     </p>
                   </div>
                 </div>
