--- a/index.html
+++ b/index.html
@@ -569,11 +569,11 @@
               </p>
               <div class="row">
                 <div class="col text-start">
-                  <p style="width: 135px">Date<br />Time<br />Prizes</p>
+                  <p style="width: 135px">Date<br /><br />Prizes</p>
                 </div>
                 <div class="col">
                   <p style="color: rgb(122, 204, 109)">
-                    20th to 21st March<br />TBA<br />₹3000+<br />
+                    20th to 21st March<br /><br />₹3000+<br />
                   </p>
                 </div>
               </div>
