--- a/index.html
+++ b/index.html
@@ -745,7 +745,7 @@ Register            </button>
           <div class="col-lg-6 order-lg-1">
             <div class="p-5">
               <h2 class="display-4" style="font-size: 40px">
-                CSS Battles&nbsp;<br />
+            Code Golf&nbsp;<br />
               </h2>
               <h1 style="font-size: 17px; color: rgb(68, 205, 90)">
                 Devsoc
