added Kaggle Link

--- a/index.html
+++ b/index.html
@@ -692,10 +692,11 @@ Register            </button>
                   March, A very basic solution will be provided to help you get
                   started. The event will be held on Kaggle. Make sure you have
                   an account on Kaggle<br />
+                  <a href="https://www.kaggle.com/c/the-table-fan-dilemma/overview">Contest Link : Kaggle</a>
                 </p>
                 <div class="row">
                   <div class="col text-start">
-                    <p style="width: 135px">Date<br />Time<br />Prizes</p>
+                    <p style="width: 135px">Date<br />Time<br /><br />Prizes</p>
                   </div>
                   <div class="col">
                     <p style="color: rgb(122, 204, 109)">
