--- a/index.html
+++ b/index.html
@@ -690,7 +690,7 @@ Register            </button>
                 <p style="background: #ffffff">
                   Unlock and unleash the power of data!!. Join the ML Hackathon and challenge yourself to develop innovative and creative solutions using Machine Learning. The contest will be held on Kaggle.Register yourselves and step into the fascinating and exciting world of Machine Learning.
                   <br />
-                  <a href="https://www.kaggle.com/c/the-table-fan-dilemma/overview">Contest Link : Kaggle</a>
+                  
                 </p>
                 <div class="row">
                   <div class="col text-start">
@@ -830,7 +830,7 @@ Register            </button>
                 </div>
               </div>
               <button
-              onclick="window.open('https://forms.gle/DeJqgJFwgdneaetw5',_blank');"
+              onclick="window.open('https://forms.gle/RxnefZt949p95rGcA',_blank');"
               class="btn btn-primary border rounded-0"
               type="button"
               style="
