--- a/index.html
+++ b/index.html
@@ -694,7 +694,7 @@ Register            </button>
                 </p>
                 <div class="row">
                   <div class="col text-start">
-                    <p style="width: 135px">Starts<br />Ends<br /><br />Prizes</p>
+                    <p style="width: 135px">Starts<br />Ends<br />Prizes</p>
                   </div>
                   <div class="col">
                     <p style="color: rgb(122, 204, 109)">
