--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
                 </div>
                 <div class="col">
                   <p style="color: rgb(122, 204, 109)">
-                    2nd April<br/>5-9 Pm<br />₹10000<br />
+                    2nd April<br/>5-9 PM<br />₹10000<br />
                   </p>
                 </div>
               </div>
@@ -568,11 +568,11 @@
                               </p>
               <div class="row">
                 <div class="col text-start">
-                  <p style="width: 135px">Date<br />Time<br />Prizes</p>
+                  <p style="width: 135px">Date<br />Time<br /></p>
                 </div>
                 <div class="col">
                   <p style="color: rgb(122, 204, 109)">
-                    6th April<br />6:00 PM<br />₹6000<br />
+                    6th April<br />6:00 PM<br /><br />
                   </p>
                 </div>
               </div>
@@ -762,7 +762,7 @@ Register            </button>
                 </div>
               </div>
               <button
-              onclick="window.open('https://forms.gle/DGNBmwAYrie1Np6F9','_blank');"
+              onclick="window.open('https://forms.gle/pzekbFWryvZ1utCZA','_blank');"
               class="btn btn-primary border rounded-0"
               type="button"
               style="
@@ -830,7 +830,7 @@ Register            </button>
                 </div>
               </div>
               <button
-              onclick="window.open('https://forms.gle/RxnefZt949p95rGcA',_blank');"
+              onclick="window.open('https://docs.google.com/forms/d/e/1FAIpQLSctjdYRqGccDIQslNahld2HaHW7Jq0O0kvjqjq-SVbudU5dqQ/viewform',_blank');"
               class="btn btn-primary border rounded-0"
               type="button"
               style="
