--- a/index.html
+++ b/index.html
@@ -509,7 +509,7 @@
                 </div>
                 <div class="col">
                   <p style="color: rgb(122, 204, 109)">
-                    5th April<br />8:00pm to 10:00pm<br />₹5000<br />
+                    5th April<br />8:00pm to 10:00pm<br />₹4500<br />
                   </p>
                 </div>
               </div>
@@ -825,7 +825,7 @@ Register            </button>
                 </div>
                 <div class="col">
                   <p style="color: rgb(122, 204, 109)">
-                    6th April<br />5PM - 8PM<br />₹3000+<br />
+                    6th April<br />5PM - 8PM<br />₹4500<br />
                   </p>
                 </div>
               </div>
