--- a/index.html
+++ b/index.html
@@ -829,8 +829,8 @@ Register            </button>
                   </p>
                 </div>
               </div>
-              <button
-              onclick="window.open('https://docs.google.com/forms/d/e/1FAIpQLSctjdYRqGccDIQslNahld2HaHW7Jq0O0kvjqjq-SVbudU5dqQ/viewform',_blank');"
+               <button
+              onclick="window.open('https://docs.google.com/forms/d/e/1FAIpQLSctjdYRqGccDIQslNahld2HaHW7Jq0O0kvjqjq-SVbudU5dqQ/viewform','_blank');"
               class="btn btn-primary border rounded-0"
               type="button"
               style="
