--- a/index.html
+++ b/index.html
@@ -240,9 +240,12 @@
               /--></a>
                 </h5>
               <p class="text-start" style="color: rgb(33, 37, 41)">
-                IEEE brings you a no-code CTF. Questions unlock upcoming questions, every round is a puzzle, participants have to approach puzzles with your technical knowledge.
-                Hints will be released periodically ;)
-                <br />
+IEEE brings to you, the Tech Hunt: A competition full of cryptic puzzles, riddles and trivia and more, to test the Techie in you! Join us for an evening of fun where you and your friends tackle questions across the world of Tech, for prizes, goodies and bragging rights!
+Hints will be released periodically ;)
+<br />
+This event is sponsored by 'WAGMI'. Top 3 winner will be getting personalized T-Shirts too.<br />
+
+The objective is to bid strongly on your technical strengths and then solve the puzzles. The delta is making smart decisions for the maximum points.                <br />
                 The objective is to bid strongly on your technical strengths and then solve the puzzles. The delta is making smart decisions for the maximum points.
                               </p>
               <div class="row">
@@ -253,7 +256,7 @@
                 </div>
                 <div class="col">
                   <p style="color: rgb(122, 204, 109)">
-                    2nd April<br/>5-9 PM<br />₹10000<br />
+                    2nd April<br/>5-9 PM<br />₹10000 and the top 3 get Personalised T-shirts<br />
                   </p>
                 </div>
               </div>
