--- a/index.html
+++ b/index.html
@@ -234,19 +234,18 @@
               </h2>
 
               <h1 style="font-size: 17px; color: rgb(68, 205, 90)">IEEE</h1><h5>
-                Sponsored By :&nbsp;<a href=""> Wagmi<!--img
+                Sponsored By :&nbsp;<a href=""> WAGMI<!--img
                   src="assets/img/GFG%20LOGO-3%20(1).png?h=161d3763c8528dff49daa8b164e866c5"
                   style="transform: scale(1); min-width: 4vw; min-height: 4vh; max-width: 8vw;"
               /--></a>
                 </h5>
               <p class="text-start" style="color: rgb(33, 37, 41)">
-IEEE brings to you, the Tech Hunt: A competition full of cryptic puzzles, riddles and trivia and more, to test the Techie in you! Join us for an evening of fun where you and your friends tackle questions across the world of Tech, for prizes, goodies and bragging rights!
-Hints will be released periodically ;)
-<br />
+IEEE brings to you, the Tech Hunt: A competition full of cryptic puzzles, trivia, riddles and more, to test the Techie in you! Join us for an evening of fun where you and your friends tackle questions across the world of Tech, for prizes, goodies and bragging rights!
+Hints will be released periodically ;)<br />
+
 This event is sponsored by 'WAGMI'. Top 3 winner will be getting personalized T-Shirts too.<br />
 
-The objective is to bid strongly on your technical strengths and then solve the puzzles. The delta is making smart decisions for the maximum points.                <br />
-                The objective is to bid strongly on your technical strengths and then solve the puzzles. The delta is making smart decisions for the maximum points.
+The objective is to show your technical strengths and then solve the puzzles. The delta is making smart decisions for the maximum points.
                               </p>
               <div class="row">
                 <div class="col text-start">
