--- a/index.html
+++ b/index.html
@@ -509,7 +509,7 @@ The objective is to show your technical strengths and then solve the puzzles. Th
                 BITSKrieg<br />
               </h1>
               <p class="text-start" style="color: rgb(33, 37, 41)">
-                This TechWeekend CTE in association with BitsKrieg is organizing a 48 hour long Capture The Flag(CTF) event which would involve challenges that will test your various cyber security concepts in a fun and intriguing way. So this weekend put on your hacker hoodies and get ready to have fun.
+                This TechWeekend CTE in association with BITSKrieg is organizing a 48 hour long Capture The Flag(CTF) event which would involve challenges that will test your various cyber security concepts in a fun and intriguing way. So this weekend put on your hacker hoodies and get ready to have fun.
 <br />It is a beginner friendly CTF and all of you are encouraged to participate :) 
 
               </p>
@@ -655,7 +655,7 @@ The objective is to show your technical strengths and then solve the puzzles. Th
               <h2 class="display-4" style="background: #ffffff; font-size: 40px; font-family: Catamaran, sans-serif;">Sher-Locked</h2>
               <h1 style="font-size: 17px; color: #44cd5a">BITSKrieg<br /></h1>
               <p>
-                Join us for an unprecedented experience brought to you by BITSkrieg! In just 15 minutes, within the confines of an enclosed room, participants will explore the depths of forensics, hunting for clues and unravelling secrets. This event is tailored for beginners, requiring only a curious mind and a team of like-minded individuals. Prepare to feel the adrenaline rush of investigators as you delve into the unknown. Don't miss out - see you there!
+                Join us for an unprecedented experience brought to you by BITSKrieg! In just 15 minutes, within the confines of an enclosed room, participants will explore the depths of forensics, hunting for clues and unravelling secrets. This event is tailored for beginners, requiring only a curious mind and a team of like-minded individuals. Prepare to feel the adrenaline rush of investigators as you delve into the unknown. Don't miss out - see you there!
               </p>
               <p style="background: #ffffff"></p>
               <div class="row">
