--- a/index.html
+++ b/index.html
@@ -924,12 +924,12 @@ The objective is to show your technical strengths and then solve the puzzles. Th
             </div>
             <div class="col">
               <p style="color: rgb(122, 204, 109)">
-                3rd April<br />6:30 PM - 8:00 PM<br />₹6000<br />
+                10th January<br />6:30 PM - 8:00 PM<br />₹6000<br />
               </p>
             </div>
           </div>
           <button
-            onclick="window.open('https://forms.gle/uVUvDAHEo518x4AHA','_blank')"
+            onclick="window.open('https://forms.gle/xBvmDy61gdZpUdRJ7','_blank')"
             class="btn btn-primary border rounded-0"
             type="button"
             style="
