--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@ The objective is to show your technical strengths and then solve the puzzles. Th
               <h2 class="display-4" style="font-size: 40px">#include &lt;techweed.h&gt;</h2>
               <h1 style="font-size: 17px; color: rgb(68, 205, 90)">AlgoManiaX</h1>
               <p class="text-start" style="color: rgb(33, 37, 41)">
-                Have you loved thinking about problems and felt elated when faced with a challenge? Competitive programming is an exciting mind sport which forces you to think out of the box! Use programming languages to exhibit your technical and intellectual prowess and solve mind-bending problems. So what’s the wait? Register yourselves, brainstorm and win exciting cash prizes.
+                A high-intensity, 2-hour programming competition modeled on the ICPC (International Collegiate Programming Contest) format. Participants will solve algorithmic challenges under time pressure, testing their coding efficiency and problem-solving acumen.
                 <br /><br />
               </p>
               <div class="row">
@@ -437,7 +437,7 @@ The objective is to show your technical strengths and then solve the puzzles. Th
                   <p style="width: 135px">Date<br />Time<br />Prizes</p>
                 </div>
                 <div class="col">
-                  <p style="color: rgb(122, 204, 109)">3rd April<br />8:00pm to 10:00pm<br />₹10000<br /></p>
+                  <p style="color: rgb(122, 204, 109)">11th January<br />8:00pm to 10:00pm<br />₹10000<br /></p>
                 </div>
               </div>
               <button onclick="window.open('https://forms.gle/jeKPGYxibyEfnmQx7','_blank');" class="btn btn-primary border rounded-0" type="button" style="background: #44cd5a; border-top-color: rgb(255, 255, 255); border-right-color: rgb(255, 255, 255); border-bottom-color: rgb(255, 255, 255); border-left-color: rgb(252, 252, 252);">Register</button>
