--- a/index.html
+++ b/index.html
@@ -466,8 +466,8 @@ The objective is to show your technical strengths and then solve the puzzles. Th
                 BITSKrieg<br />
               </h1>
               <p class="text-start" style="color: rgb(33, 37, 41)">
-                This TechWeekend CTE in association with BITSKrieg is organizing a 72 hour long Capture The Flag(CTF) event which would involve challenges that will test your various cyber security concepts in a fun and intriguing way. So this weekend put on your hacker hoodies and get ready to have fun.
-<br />It is a beginner friendly CTF and all of you are encouraged to participate :) 
+                This TechWeekend'25, CTE, in collaboration with BitsKrieg, presents a 48-hour Capture the Flag event. Engage in challenges tailored to test your grasp of cybersecurity concepts in an enjoyable and interactive manner. So, don your hacker hoodies this weekend and prepare for a thrilling experience. This beginner-friendly CTF encourages participation from all!
+   :) 
 
               </p>
               <div class="row">
@@ -481,7 +481,7 @@ The objective is to show your technical strengths and then solve the puzzles. Th
                 </div>
               </div>
               <button
-              onclick="window.open('https://forms.gle/f42foJdeB2qt87w8A','_blank')"
+              onclick="window.open('https://forms.gle/ADxK1QjBRXAMSPRm9','_blank')"
               class="btn btn-primary border rounded-0"
               type="button"
               style="
