--- a/index.html
+++ b/index.html
@@ -440,7 +440,7 @@ The objective is to show your technical strengths and then solve the puzzles. Th
                   <p style="color: rgb(122, 204, 109)">11th January<br />8:00pm to 10:00pm<br />₹10000<br /></p>
                 </div>
               </div>
-              <button onclick="window.open('https://forms.gle/jeKPGYxibyEfnmQx7','_blank');" class="btn btn-primary border rounded-0" type="button" style="background: #44cd5a; border-top-color: rgb(255, 255, 255); border-right-color: rgb(255, 255, 255); border-bottom-color: rgb(255, 255, 255); border-left-color: rgb(252, 252, 252);">Register</button>
+              <button onclick="window.open('https://docs.google.com/forms/d/1T0r5eAeAh8copGprxyAGWFVDsT1ItzYgDMv_6cKkiMM/edit','_blank');" class="btn btn-primary border rounded-0" type="button" style="background: #44cd5a; border-top-color: rgb(255, 255, 255); border-right-color: rgb(255, 255, 255); border-bottom-color: rgb(255, 255, 255); border-left-color: rgb(252, 252, 252);">Register</button>
             </div>
           </div>
         </div>
@@ -649,10 +649,10 @@ The objective is to show your technical strengths and then solve the puzzles. Th
           </div>
           <div class="col-lg-6 order-lg-2">
             <div class="p-5">
-              <h2 class="display-4" style="background: #ffffff; font-size: 40px; font-family: Catamaran, sans-serif;">SAiDL Hackathon<br /></h2>
+              <h2 class="display-4" style="background: #ffffff; font-size: 40px; font-family: Catamaran, sans-serif;">Pixel Odyssey: Beyond Convolution<br /></h2>
               <h1 style="font-size: 17px; color: rgb(68, 205, 90)">Society for AI and DL (SAiDL)<br /></h1>
               <p style="background: #ffffff">
-                Unlock and unleash the power of data! Join the Hackathon and challenge yourself to develop innovative and creative solutions using Machine Learning. The contest will be held on Kaggle. Register yourselves and step into the fascinating and exciting world of Machine Learning.
+                Participants will venture into the world of image classification using the CIFAR-100 dataset, crafting models that defy tradition—no convolutional layers allowed. Innovate and redefine image classification! Aim high: train a model from scratch and achieve over 95% accuracy to conquer the challenge!
                 <br />
               </p>
               <div class="row">
@@ -663,7 +663,7 @@ The objective is to show your technical strengths and then solve the puzzles. Th
                   <p style="color: rgb(122, 204, 109)"><br />2nd April 12:00 AM<br />₹8000<br />3rd April 12:00 AM</p>
                 </div>
               </div>
-              <button onclick="window.open('https://forms.gle/grDUTdQ6VNXjtiBUA','_blank');" class="btn btn-primary border rounded-0" type="button" style="background: #44cd5a; border-top-color: rgb(255, 255, 255); border-right-color: rgb(255, 255, 255); border-bottom-color: rgb(255, 255, 255); border-left-color: rgb(252, 252, 252);">Register</button>
+              <button onclick="window.open('https://forms.gle/tMyD1Qj3AWJAAzDZA','_blank');" class="btn btn-primary border rounded-0" type="button" style="background: #44cd5a; border-top-color: rgb(255, 255, 255); border-right-color: rgb(255, 255, 255); border-bottom-color: rgb(255, 255, 255); border-left-color: rgb(252, 252, 252);">Register</button>
             </div>
           </div>
         </div>
@@ -778,67 +778,6 @@ The objective is to show your technical strengths and then solve the puzzles. Th
   </div>
 </section>
 
-
-<!-- Kratos -->
-<section>
-  <div class="container">
-    <div
-      class="row align-items-center"
-      style="
-        background: #f7f7f7;
-        border-color: rgb(43, 234, 26);
-        border-radius: 17px;
-      "
-    >
-      <div class="col-lg-6 order-lg-2">
-        <div class="p-5">
-          <img
-            class="img-thumbnail img-fluid"
-            src="assets/img/TW'24/9.png"
-            style=""
-          />
-        </div>
-      </div>
-      <div class="col-lg-6 order-lg-1">
-        <div class="p-5">
-          <h2 class="display-4" style="font-size: 40px">
-            AutoMania
-          </h2>
-          <h1 style="font-size: 17px; color: rgb(68, 205, 90)">
-            Project Kratos<br />
-          </h1>
-          <p class="text-start" style="color: rgb(33, 37, 41)">
-            Are you amazed by what robots can achieve? Brace yourself for an even more mind-blowing experience at Automania, a 24-hour hackathon proudly presented by Project Kratos in collaboration with CTE! Join us as we challenge you to program an Autonomous Mobile robot to navigate and steer clear of obstacles, simulating an intelligent brain of its own.
-          </br>
-            No prior experience? No worries! All you need is a basic grasp of Python and a curious mindset to dive into this hackathon headfirst.          <div class="row">
-            <div class="col text-start">
-              <p style="width: 135px">Date<br />Time<br />Prizes</p>
-            </div>
-            <div class="col">
-              <p style="color: rgb(122, 204, 109)">
-                2nd April<br />7:00 PM to 8:00 PM (Ideation Phase)<br />₹8000<br />
-              </p>
-            </div>
-          </div>
-          <button
-          onclick="window.open('https://forms.gle/dYEHFiwaAmtdmyzw5','_blank')"
-          class="btn btn-primary border rounded-0"
-          type="button"
-          style="
-            background: #44cd5a;
-            border-top-color: rgb(255, 255, 255);
-            border-right-color: rgb(255, 255, 255);
-            border-bottom-color: rgb(255, 255, 255);
-            border-left-color: rgb(252, 252, 252);
-          "
-        >
-          Register
-        </button>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
 
 <!-- Finance Quiz -->
 <section>
@@ -1026,7 +965,7 @@ The objective is to show your technical strengths and then solve the puzzles. Th
             small
           "
         >
-          <br />Copyright&nbsp;© CTE 2023&nbsp;<br />Designed and developed by Soham Shinde, Shreyas V, Darshan Khade.<br />Special
+          <br />Copyright&nbsp;© CTE 2025&nbsp;<br />Designed and developed by Soham Shinde, Shreyas V, Darshan Khade.<br />Special
           Thanks to CTE PR Team for the images.<br /><br />
         </p>
       </div>
